# vecmap

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: map.rs  vecmap_benchmark.rs
examples/: wordcount.rs
src/: lib.rs  map.rs  vecmap.rs
