[package]
name = "vecmap"
version = "0.1.0"
authors = ["Thoren Paulson <thoren.paulson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.1"
rand = "0.7.3"

[[bench]]
name = "vecmap_benchmark"
harness = false
