[package]
name = "vecmap"
version = "0.1.0"
authors = ["Thoren Paulson <thoren.paulson@gmail.com>"]
description = "Vec-based Map and Set data structures."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "map"
harness = false
